# kscraper

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml
docs/: project_diagram.py
services/etl/: pyproject.toml
services/queue-consumer/: dockerfile  main.py  pyproject.toml
services/scraper/: dockerfile  example.yaml  main.py  parser.py  pyproject.toml  scraper.py  test_parser.py
services/scraper/tests/: test_parser.py  test_scraper.py
services/scraper/tests/fixtures/: error.yaml  missingfields.yaml  missinglimiter.yaml  missingmultiple.yaml  missingpagination.yaml  mock.yaml
