[project]
name = "kscraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "services/scraper",
    "services/queue-consumer",
    "services/etl",
    "services/api",
    "packages/shared",
]

[dependency-groups]
dev = [
    "diagrams>=0.25.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
